# intersec-monorepo

./: .firebaserc  .gitignore  Dockerfile  Dockerfile.build  FILE_STRUCTURE.md  README.md  REALTIME_CAPTURE_INTEGRATION.md  RUST_JNI_IMPLEMENTATION_GUIDE.md  Sem título1.ps1  build.gradle.kts  build_rust_android.ps1  cloudbuild.yaml  firestore.rules  gradle.properties  keystore.properties.example  settings.gradle.kts  storage.rules
androidApp/: build.gradle.kts
native-engine/crates/neural-intelligence/: Cargo.toml
native-engine/crates/neural-intelligence/src/: lib.rs
native-engine/crates/use-cases/: Cargo.toml
native-engine/crates/use-cases/src/: contracts.rs  error.rs  get_flow_detail.rs  get_packet_detail.rs  list_flows.rs  list_packets.rs  models.rs  open_capture.rs
native-engine/crates/use-cases/tests/: list_flows_use_case.rs  list_packets_use_case.rs  open_capture_use_case.rs  overview_use_case.rs
rust-core/: Cargo.toml  PATCH_NOTES.txt  README.md  Sem título1.ps1
rust-core/crates/android-adapter/src/: adapter.rs  error.rs  jni_interface.rs  lib.rs  mapper.rs
rust-core/crates/android-adapter/tests/: adapter_smoke.rs
rust-core/crates/android-jni-bridge/: Cargo.toml
rust-core/crates/android-jni-bridge/src/: lib.rs
rust-core/crates/application-services/: Cargo.toml
rust-core/crates/application-services/src/: capture_worker.rs  error.rs  lib.rs  services.rs
rust-core/crates/application-services/tests/: open_and_store.rs  query_active_session.rs
rust-core/crates/bridge-runtime/: Cargo.toml
rust-core/crates/bridge-runtime/src/: error.rs  runtime.rs
rust-core/crates/bridge-runtime/tests/: runtime_smoke.rs
rust-core/crates/capture-reader/src/: format_detector.rs  lib.rs  pcap.rs  pcapng.rs  reader.rs
rust-core/crates/capture-reader/tests/: detect_formats.rs  pcapng_reader.rs
rust-core/crates/core-types/src/: lib.rs
rust-core/crates/facade-api/: Cargo.toml
rust-core/crates/facade-api/src/: error.rs  facade.rs
rust-core/crates/facade-api/tests/: facade_smoke.rs
rust-core/crates/ffi-contracts/src/: codecs.rs  contracts.rs  lib.rs
rust-core/crates/ffi-contracts/tests/: ffi_contracts_smoke.rs
rust-core/crates/flow-engine/src/: flow_identifier.rs  lib.rs  neural.rs  summary.rs  tracker.rs
rust-core/crates/flow-engine/tests/: track_bidirectional_flow.rs
rust-core/crates/ios-adapter/src/: adapter.rs
rust-core/crates/ios-adapter/tests/: adapter_smoke.rs
rust-core/crates/kotlin-bridge-contracts/: Cargo.toml
rust-core/crates/kotlin-bridge-contracts/src/: codecs.rs  dto.rs  lib.rs
rust-core/crates/kotlin-bridge-contracts/tests/: contracts_smoke.rs
rust-core/crates/mobile-bridge/: Cargo.toml
rust-core/crates/mobile-bridge/src/: bridge.rs  dto.rs  serializers.rs
rust-core/crates/mobile-bridge/tests/: bridge_smoke.rs
rust-core/crates/neural-intelligence/: Cargo.toml
rust-core/crates/protocol-engine/: Cargo.toml
rust-core/crates/protocol-engine/src/: decoder.rs  lib.rs  summary.rs
rust-core/crates/protocol-engine/tests/: decode_apr.rs  decode_ipv6_icmpv6.rs  decode_ipv6_udp_dns.rs  decode_tcp_ssh.rs  decode_udp_ntp.rs
rust-core/crates/query-engine/src/: engine.rs  error.rs  filters.rs
rust-core/crates/query-engine/tests/: query_flows.rs
rust-core/crates/security-dissector/src/: lib.rs
rust-core/crates/session-manager/: Cargo.toml
rust-core/crates/session-manager/src/: lib.rs  manager.rs  models.rs
rust-core/crates/session-manager/tests/: open_session.rs  selection.rs
rust-core/crates/storage/: Cargo.toml
rust-core/crates/storage/src/: error.rs  memory_store.rs  models.rs
rust-core/crates/traffic-valve/: Cargo.toml
rust-core/fixtures/: README.md
(+197 files in other folders)
