[package]
name = "neural-intelligence"
version = "0.1.0"
edition = "2021"

[lib]
name = "neural_intelligence"
path = "src/lib.rs"

[dependencies]
core-types = { path = "../core-types" }
flow-engine = { path = "../flow-engine" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
