[package]
name = "use-cases"
version = "0.1.0"
edition = "2021"

[lib]
name = "use_cases"
path = "src/lib.rs"

[dependencies]
core-types = { path = "../core-types" }
capture-reader = { path = "../capture-reader" }
protocol-engine = { path = "../protocol-engine" }
flow-engine = { path = "../flow-engine" }