[package]
name = "android-jni-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "wireshark_mobile_core"
crate-type = ["cdylib"]

[dependencies]
bridge-runtime = { path = "../bridge-runtime" }
kotlin-bridge-contracts = { path = "../kotlin-bridge-contracts" }
android-adapter = { path = "../android-adapter" }
jni = "0.21"
once_cell = "1.19"
